# mimo-spec

./: .gitignore  AGENTS.md  README.md  install.bat  install.ps1  mimo-extract.bat  mimo-extract.ps1  mimo-pack.bat  mimo-pack.ps1  mimo-validate.bat  mimo-validate.ps1  pyproject.toml  requirements.txt
examples/: mixed_doc.md  sample.txt  sample_table.csv
examples/reconstructed/: asset_index.jsonl  sample_assets.md  sample_doc.txt
mimo_spec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mimo_spec/contracts/: README.md  corrects_tombstone_v0_1.md  id_dedup_v0_1.md  mu_v1_1.schema.json  pointer_locator_v0_1.schema.json  snapshot_v0_1.schema.json
mimo_spec/tools/: mimo_extract.py  mimo_pack.py  mimo_validate.py  mu_hash.py
tests/: test_corrects_tombstone.py  test_mu_hash_and_dedup.py  test_pointer_locator_validation.py  test_snapshot_validation.py
tools/: mimo-pack.py  mimo-validate.py  mimo_pack.py
